# MyZero

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  RELEASE_CHECKLIST.md  STARTUP.md  build.bat  build.py  installer.iss  myzero.spec  start-backend.bat  start-frontend.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  build-release.yml  ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py
backend/app/: config.py  database.py  main.py  models.py  paths.py  schemas.py
backend/app/routers/: config.py  history.py  optimize.py  stats.py  tools.py
backend/app/services/: ai_service.py  mineru_service.py  prompt_template_service.py  stats_service.py  text_processor.py  tool_service.py
docs/superpowers/plans/: 2026-04-21-myzero-implementation.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/components/: CollapsibleSection.jsx  Header.jsx  LoadingSpinner.jsx  ModeSelector.jsx  RangeSlider.jsx  RevisionViewer.jsx  Sidebar.jsx  TextInput.jsx
frontend/src/components/tools/: LatexConverter.jsx  MermaidGenerator.jsx  (+1 more)
frontend/src/hooks/: useCountUp.js  useSidebarState.js
frontend/src/pages/: HistoryPage.jsx  HomePage.jsx  ResultPage.jsx  SettingsPage.jsx  StatsPage.jsx  ToolsPage.jsx
frontend/src/utils/: modeConfig.js
